@@ -3,6 +3,13 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2003-03-17:   (0.2.0.beta7)
+	- Code clean-up:
+		- Removed unused types: MdDispatcher, MdHelper, AttrGroup, AttrDef.
+		  Medatada is handled in "ontmd" project. See 2008-11-14 comment below.
+		
+		
+		
 2003-03-16:
 	- Fixed Issue 102: "searches should be against the "unversioned" form of the latest ontologies"
  	  See OntGraph.
